Dev changes, ongoing

--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
 	<!-- Site version 2.4.2 \./ -->
 
 <head>
+<meta name="robots" content="noindex">
+
 <title>Harmonious Platform Systems - About</title>
 
 <style>
@@ -90,8 +92,18 @@
 	<a href="about.html">ABOUT</a> | 
 	<a href="contact.html">CONTACT</a>
 	</strong></div></font>
-	<hr style="border: 1px solid gold;" /><br>
-
+	<hr style="border: 1px solid gold;" />
+						<!-- no <br> after above list on this page to allow for additional note as mentioned below -->
+		<!-- this is an additional note section which is to be used on this page only -->
+		<font color="gold">
+			<div align="center" style="font-size:50%">
+				<strong>Please scroll down for Payments and Donations information</strong>
+			</div>
+			<div align="center" style="font-size:50%">
+				˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅ ˅
+			</div>
+		</font>
+	
 	<p><strong>About</strong></p>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%">Harmonious Platform Systems is a startup. We understand the exciting 
