--- a/index.html
+++ b/index.html
@@ -98,13 +98,31 @@
 	<font color="gold"><div align="right" style="font-size:50%"><a href="cmdc.html" style="color:blue; text-decoration:none";>CMDC</a></div></font><br>
 	
 		<!-- general status summary of Harmonious Platform -->
-	<font color="gold"><div align="right" style="font-size:50%"><b><u>Snapshot (2022)</u></b></div></font>
+	<font color="gold"><div align="right" style="font-size:50%"><b><u>Network Snapshot</u></b></div></font>
 	<font color="gold"><div align="right" style="font-size:50%"><strong>&#8595;</strong></div></font>
 
-	<font color="gold"><div align="right" style="font-size:50%"><label for="dev">Uptime (100%)</label></div></font>
+	<font color="gold"><div align="right" style="font-size:50%"><label for="dev">Uptime (2022) (100%)</label></div></font>
 	<font color="gold"><div align="right" style="font-size:50%"><progress id="dev" value="100" max="100"> 100% </progress></div></font>
 
-	<font color="gold"><div align="right" style="font-size:50%"><label for="dev">Security breaches (0)</label></div></font>
+	<font color="gold"><div align="right" style="font-size:50%"><label for="dev">Core (ONLINE)</label></div></font>
+	<font color="gold"><div align="right" style="font-size:50%"><progress id="dev" value="100" max="100"> 100% </progress></div></font>
+
+	<font color="gold"><div align="right" style="font-size:50%"><label for="dev">Mainframe (ONLINE)</label></div></font>
+	<font color="gold"><div align="right" style="font-size:50%"><progress id="dev" value="100" max="100"> 100% </progress></div></font>
+
+	<font color="gold"><div align="right" style="font-size:50%"><label for="dev">CMDC (ONLINE)</label></div></font>
+	<font color="gold"><div align="right" style="font-size:50%"><progress id="dev" value="100" max="100"> 100% </progress></div></font>
+
+	<font color="gold"><div align="right" style="font-size:50%"><label for="dev">CMDC mining server #1 (ONLINE)</label></div></font>
+	<font color="gold"><div align="right" style="font-size:50%"><progress id="dev" value="100" max="100"> 100% </progress></div></font>
+
+	<font color="gold"><div align="right" style="font-size:50%"><label for="dev">CMDC mining server #2 (ONLINE)</label></div></font>
+	<font color="gold"><div align="right" style="font-size:50%"><progress id="dev" value="100" max="100"> 100% </progress></div></font>
+
+	<font color="gold"><div align="right" style="font-size:50%"><label for="dev">Gobble Chain (ONLINE)</label></div></font>
+	<font color="gold"><div align="right" style="font-size:50%"><progress id="dev" value="100" max="100"> 100% </progress></div></font>
+
+	<font color="gold"><div align="right" style="font-size:50%"><label for="dev">Known security breaches (0)</label></div></font>
 	<font color="gold"><div align="right" style="font-size:50%"><progress id="dev" value="0" max="100"> 0% </progress></div></font>
 <!-- cont. -->
 
