--- a/status.html
+++ b/status.html
@@ -4,6 +4,8 @@
 	<!-- Site version 2.4.2 \./ -->
 
 <head>
+<meta name="robots" content="noindex">
+
 <title>Harmonious Platform Systems - Status</title>
 
 <style>
