News added to front page.

--- a/index.html
+++ b/index.html
@@ -122,8 +122,11 @@
 	<font color="gold"><div align="right" style="font-size:50%"><label for="dev">Gobble Chain (ONLINE)</label></div></font>
 	<font color="gold"><div align="right" style="font-size:50%"><progress id="dev" value="100" max="100"> 100% </progress></div></font>
 
-	<font color="gold"><div align="right" style="font-size:50%"><label for="dev">Known security breaches (0)</label></div></font>
-	<font color="gold"><div align="right" style="font-size:50%"><progress id="dev" value="0" max="100"> 0% </progress></div></font>
+	<font color="gold"><div align="right" style="font-size:50%"><label for="dev">Known security breaches (1)</label></div></font>
+	<font color="gold"><div align="right" style="font-size:50%"><progress id="dev" value="1" max="100"> 100% </progress></div></font>
+
+	<font color="gold"><div align="right" style="font-size:50%"><label for="dev">Breach severity assessment</label></div></font>
+	<font color="gold"><div align="right" style="font-size:50%"><progress id="dev" value="75" max="100"> 75% </progress></div></font>
 <!-- cont. -->
 
 			<!-- logo image is to be used as part of the title text \./ -->
@@ -171,6 +174,24 @@
 <br>
 	<font color="gold"><div <span property="cc:attributionName" style="font-size:50%"><b><u>News</u></b></div></font>
 
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<em><b>February 8, 2022</b><br>
+	<br>
+	***** IMPORTANT! *****
+	<br>
+	We are currently investigating a security breach which has penetrated our network.
+	<br>
+	Our initial assessment points to a Mainframe breach.
+	<br>
+	This is both good and bad.
+	<br>
+	The good news is it means that it may be limited to one system and can be maintained to the intranet.
+	<br>
+	The bad news is it makes it more difficult to investigate the entry point the breach has occurred.
+	<br>
+	More information will be posted to the website when we complete our investigation.</em>
+	</p>
+	
 	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<em><b>January 16, 2022</b><br>
 	<br>
