--- a/cmdc.html
+++ b/cmdc.html
@@ -124,8 +124,8 @@
 	transactions using CMDC. Transaction tools and a ledger are currently being developed. More news about its progress will be posted when available. 
 	December 19, 2021 - A milestone was reached when the first 10 billion CMDC was refined and dropped into the social distribution vault.</div></font><br>
 
-	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault: $CMDC 490,000,000,000</div></font>
-	<font color="gold"><div align="left" style="font-size:60%"><strong>In circulation: 0</div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault: $CMDC 489,998,750,000</div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>In circulation: $CMDC 1,250,000</div></font>
 	<font color="gold"><div align="left" style="font-size:60%">Value rate: 1:2500</div></font>
 	<font color="gold"><div align="left" style="font-size:60%">Total value: $US 196,000,000 </strong></div></font><br>
 
