--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 	<font color="gold"><div align="right" style="font-size:50%"><progress id="dev" value="1" max="100"> 100% </progress></div></font>
 
 	<font color="gold"><div align="right" style="font-size:50%"><label for="dev">Breach severity assessment</label></div></font>
-	<font color="gold"><div align="right" style="font-size:50%"><progress id="dev" value="75" max="100"> 75% </progress></div></font>
+	<font color="gold"><div align="right" style="font-size:50%"><progress id="dev" value="0" max="100"> 0% </progress></div></font>
 <!-- cont. -->
 
 			<!-- logo image is to be used as part of the title text \./ -->
@@ -175,6 +175,27 @@
 	<font color="gold"><div <span property="cc:attributionName" style="font-size:50%"><b><u>News</u></b></div></font>
 
 	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<em><b>February 10, 2022</b><br>
+	<br>
+	We have completed our investigation into a recent security breach that we detected.
+	<br>
+	The breach has now been contained and all systems on Harmonious Platform Systems network are now 
+	secure.
+	<br>
+	The breach was not as severe as we anticipated and was limited to one web browser being hijacked 
+	on the Mainframe.
+	<br>
+	The web browser has been returned to default settings and reconfigured successfully, eliminating 
+	the threat.
+	<br>
+	As a precaution, our proxy server has been assessed and traffic analyzed.
+	<br>
+	The proxy server was not affected.
+	<br>
+	This investigation is now closed.</em>
+	</p>
+	
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<em><b>February 8, 2022</b><br>
 	<br>
 	***** IMPORTANT! *****
@@ -185,7 +206,7 @@
 	<br>
 	This is both good and bad.
 	<br>
-	The good news is it means that it may be limited to one system and can be maintained to the intranet.
+	The good news is it means that it may be limited to one system and can be restricted to the intranet.
 	<br>
 	The bad news is it makes it more difficult to investigate the entry point the breach has occurred.
 	<br>
