--- a/cmdc.html
+++ b/cmdc.html
@@ -17,10 +17,24 @@
 .main {
   font-size: 24px;
 }
+
+.button
+	{
+border: none;
+color: black;
+padding: 8px 12px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 12px;
+margin: 4px 2px;
+cursor: pointer;
+	}
+.button1 {background-color: gold;} /* button */
 </style>
 </head>
 
-<body>
+<body oncontextmenu="return false;">
 
 <div class="main">
     <font color="gold">
@@ -101,33 +115,57 @@
 	<font color="gold"><div align="left" style="font-size:50%">CMDC is an acronym for <u>Centrally Managed Digital Currency</u> and can be stylized as 
 	$CMDC.</div></font><br>
 	
-	<font color="gold"><div align="left" style="font-size:50%">It is a prototype digital currency with a specification which pegs it to a defined 
+	<font color="gold"><div align="left" style="font-size:50%">It is a prototype digital currency (or asset) with a specification which pegs it to a defined 
 	existing currency to determine its value. Due to the way it has been developed, it is inherently flawed. The original value rate was proposed to be 
 	1:1.25. For example, 1 US dollar would equate to 1.25 CMDC. However, big development changes to the mining process have now altered the original rate. 
-	A new value rate is 1:2500.</div></font><br>
+	The value rate is now 1:2500.</div></font><br>
 
 	<font color="gold"><div align="left" style="font-size:50%">Bitcoin is infamous for being energy and resource intensive during the mining process. Some 
 	analysts believe that its high rate of energy use could see its eventual demise. CMDC has been designed specifically to be light on system resources for 
-	mining and storage to increase energy efficiency. During the mining process it will push all cores of the central processing unit to maximum but memory 
-	usage remains moderate. While there is no technical limitation to the total number of CMDC blocks that can be put into circulation, there are still 
-	restrictions of the amount of available blocks in holding in the social distribution vault.</div></font><br>
+	both mining and storage. This helps increase energy efficiency and ease the storage burden while still being able to mine large amounts. During the mining 
+	process it may push all cores of the central processing unit to maximum but memory usage remains moderate. While there is no technical limitation to the 
+	total number of CMDC blocks that can be put into circulation, there are still restrictions of the amount of available blocks in holding in the social 
+	distribution vault.</div></font><br>
 
-	<font color="gold"><div align="left" style="font-size:50%">CMDC is mined using a parallel processing and file duplication combination. Mined 
-	blocks are created from a raw block, called "block0". To prevent fraudulent duplication of blocks, each individual block is dated and 
-	timestamped which cannot be altered through traditional file duplication methods of the operating system. Once the mining process is complete, 
-	mined blocks are then refined. Without being refined, the blocks are worthless. During the refining process the blocks are compressed, encrypted 
-	and digitally signed with a unique and secret key which is not made public. It is this secret key which is used to identify authenticity of 
-	CMDC block sets.</div></font><br>
+	<font color="gold"><div align="left" style="font-size:50%">CMDC is mined using a parallel processing and file duplication combination. Mined blocks are 
+	created from a raw block, called "block0". To prevent fraudulent duplication of blocks, each individual block is dated and timestamped which cannot be 
+	altered through traditional file duplication methods of the operating system. Once the mining process is complete, mined blocks are then refined. Without 
+	being refined, the blocks are worthless. During the refining process the blocks are compressed, encrypted and digitally signed with a unique and secret 
+	key which is not made public. It is this secret key which is used to identify authenticity of CMDC block sets.</div></font><br>
 
 	<font color="gold"><div align="left" style="font-size:50%">Once blocks have been mined, refined, encrypted, digitally signed and verified, they are 
-	moved into a social distribution vault for circulation. Currently, there is no method to properly or safely buy, sell, trade or engage in 
-	transactions using CMDC. Transaction tools and a ledger are currently being developed. More news about its progress will be posted when available. 
-	December 19, 2021 - A milestone was reached when the first 10 billion CMDC was refined and dropped into the social distribution vault.</div></font><br>
+	moved into a social distribution vault for circulation. We are currently testing software which enables buying of CMDC and verification of transactions. 
+	We are still developing software which enables selling and trading. CMDC operates on our private blockchain, called Gobble Chain.</div></font><br>
 
-	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault: $CMDC 489,998,750,000</div></font>
+	<font color="gold"><div align="left" style="font-size:50%">One area of development focus is on integrating support for 
+	<!-- do not use tab in front of <span>. keep level with line start -->
+non-fungible tokens<b><span title="A non-fungible token (NFT) is a non-interchangeable unit of data stored on a blockchain, a form of digital ledger, that can be sold and traded.
+Source: Wikipedia">[?]</span></b>, or NFTs.
+	<!-- return to normal line formatting -->	
+	The specification for NFT integration with our blockchain is yet to be finalized and more information will be provided when available. We aim to offer 
+	NFT integration which will be applicable to original creations in the forms of digital images, photos, audio, video and other digital artwork creations, 
+	which can be sold as NFT by rights holders and bought using CMDC. The proof of rights and the transaction will be integrated into Gobble Chain.</div></font><br>
+
+		<center>
+			<button class="button button1"><b><a href="" 
+						style="color:black; text-decoration:none";>*APPLY FOR TRANSACTION ID</a></b></button>
+			<button class="button button1"><b><a href="" 
+						style="color:black; text-decoration:none";>*APPLY TO BUY CMDC</a></b></button>
+			<button class="button button1"><b><a href="" 
+						style="color:black; text-decoration:none";>*APPLY FOR NFT ID</a></b></button>
+			<button class="button button1"><b><a href="" 
+						style="color:black; text-decoration:none";>*APPLY TO SELL NFT</a></b></button>
+		</center>
+			<font color="gold"><div align="center" style="font-size:45%"><b><em>*Applications closed until further notice.</em></b></div></font><br>
+<br>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault: $CMDC 689,998,750,000</div></font>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>In circulation: $CMDC 1,250,000</div></font>
 	<font color="gold"><div align="left" style="font-size:60%">Value rate: 1:2500</div></font>
-	<font color="gold"><div align="left" style="font-size:60%">Total value: $US 196,000,000 </strong></div></font><br>
+	<font color="gold"><div align="left" style="font-size:60%">Total value: $US 276,000,000 </strong></div></font>
+<br>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>Current NFT listings: </div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong><em>No items currently listed</em></div></font>
+	<br>
 
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
