Site version updated. Includes bug fixes and minor updates.

--- a/about.html
+++ b/about.html
@@ -197,7 +197,7 @@
 	<font color="gold"><div align="center" style="font-size:50%">Litecoin: <b>ltc1qxs8dhejakl6rjdcckhlxf8trd8l8am0m5270zc</b></div></font><br>
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
-	<div align="right" style="font-size:40%">&copy; Copyright 2021</div>
+	<div align="right" style="font-size:40%">&copy; Copyright 2021-2022</div>
 	<div align="right" style="font-size:40%">Harmonious Platform Systems</div>
 	<div align="right" style="font-size:40%">ABN: 98 317 740 240</div>
 <!-- br -->
