--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 			<!-- logo image is to be used as part of the title text \./ -->
 		<font color="gold"><div style="font-size:175%">
-			<img src="https://i.imgur.com/PkMpBXR.png" alt="logo-image" width="80" height="80">
+			<img src="primary-logo.png" alt="logo-image" width="80" height="80">
 			a r m o n i o u s _ 
 			<div align="center"><b>P</b> l a t f o r m _ 
 				<b>S</b> y s t e m s</div>
@@ -327,7 +327,7 @@
 	<br>
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
-	<div align="right" style="font-size:40%">&copy; Copyright 2021</div>
+	<div align="right" style="font-size:40%">&copy; Copyright 2021-2022</div>
 	<div align="right" style="font-size:40%">Harmonious Platform Systems</div>
 	<div align="right" style="font-size:40%">ABN: 98 317 740 240</div>
 <!-- br -->
