--- a/chris-mcgimpsey-jones.html
+++ b/chris-mcgimpsey-jones.html
@@ -112,7 +112,7 @@
 	<a href="contact.html" style="color:gold; text-decoration:none";><u>Contact</u></a> page.</div></font><br>
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
-	<div align="right" style="font-size:40%">&copy; Copyright 2021</div>
+	<div align="right" style="font-size:40%">&copy; Copyright 2021-2022</div>
 	<div align="right" style="font-size:40%">Harmonious Platform Systems</div>
 	<div align="right" style="font-size:40%">ABN: 98 317 740 240</div>
 <!-- br -->
