--- a/components.html
+++ b/components.html
@@ -221,7 +221,7 @@
 
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
-	<div align="right" style="font-size:40%">&copy; Copyright 2021</div>
+	<div align="right" style="font-size:40%">&copy; Copyright 2021-2022</div>
 	<div align="right" style="font-size:40%">Harmonious Platform Systems</div>
 	<div align="right" style="font-size:40%">ABN: 98 317 740 240</div>
 <!-- br -->
