--- a/press-ostechnix-interview.html
+++ b/press-ostechnix-interview.html
@@ -332,7 +332,7 @@
 	<font color="gold"><div align="left" style="font-size:50%">It's that simple.</div></font><br>
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
-	<div align="right" style="font-size:40%">&copy; Copyright 2021</div>
+	<div align="right" style="font-size:40%">&copy; Copyright 2021-2022</div>
 	<div align="right" style="font-size:40%">Harmonious Platform Systems</div>
 	<div align="right" style="font-size:40%">ABN: 98 317 740 240</div>
 <!-- br -->
