--- a/status.html
+++ b/status.html
@@ -122,7 +122,7 @@
 			<td>2</td>
 			<td>Amsterdam, Netherlands</td>
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
-			<td>Exhausted</td>
+			<td>Open</td>
 			<td>Pitrix.viADDR#1:2:0012:51</td>
 		</tr>
 		<tr>
@@ -130,7 +130,7 @@
 			<td>1</td>
 			<td>Brisbane, Australia</td>
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
-			<td>Exhausted</td>
+			<td>Open</td>
 			<td>Pitrix.viADDR#2:1:0021:52</td>
 		</tr>
 		<tr>
@@ -146,7 +146,7 @@
 			<td>1</td>
 			<td>Hong Kong, Hong Kong</td>
 			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
-			<td>Exhausted</td>
+			<td>Open</td>
 			<td>Pitrix.viADDR#4:1:0041:54</td>
 		</tr>
 		<tr>
@@ -154,7 +154,7 @@
 			<td>1</td>
 			<td>Labrador, Australia</td>
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
-			<td>Exhausted</td>
+			<td>Open</td>
 			<td>Pitrix.viADDR#5:1:0051:55</td>
 		</tr>
 		<tr>
@@ -162,7 +162,7 @@
 			<td>1</td>
 			<td>Maroochydore, Australia</td>
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
-			<td>Exhausted</td>
+			<td>Open</td>
 			<td>Pitrix.viADDR#6:1:0061:56</td>
 		</tr>
 		<tr>
@@ -170,15 +170,15 @@
 			<td>1</td>
 			<td>Melbourne, Australia</td>
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
-			<td>Exhausted</td>
+			<td>Open</td>
 			<td>Pitrix.viADDR#7:1:0071:57</td>
 		</tr>
 		<tr>
-			<td>&#128994</td>
+			<td>&#128308</td>
 			<td>2</td>
 			<td>Moscow, Russia</td>
-			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
-			<td>Exhausted</td>
+			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
+			<td>Open</td>
 			<td>Pitrix.viADDR#8:2:0082:58</td>
 		</tr>
 		<tr>
@@ -186,7 +186,7 @@
 			<td>2</td>
 			<td>Mumbai, India</td>
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
-			<td>Exhausted</td>
+			<td>Open</td>
 			<td>Pitrix.viADDR#9:2:0092:59</td>
 		</tr>
 		<tr>
@@ -202,7 +202,7 @@
 			<td>2</td>
 			<td>Reykjavik, Iceland</td>
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
-			<td>Exhausted</td>
+			<td>Open</td>
 			<td>Pitrix.viADDR#9:2:2922:62</td>
 		</tr>
 		<tr>
@@ -210,7 +210,7 @@
 			<td>1</td>
 			<td>Salt Lake City, United States of America</td>
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
-			<td>Exhausted</td>
+			<td>Open</td>
 			<td>Pitrix.viADDR#9:1:3931:63</td>
 		</tr>
 		<tr>
@@ -226,7 +226,7 @@
 			<td>1</td>
 			<td>Stockholm, Sweden</td>
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
-			<td>Exhausted</td>
+			<td>Open</td>
 			<td>Pitrix.viADDR#9:1:5951:65</td>
 		</tr>
 		<tr>
@@ -234,7 +234,7 @@
 			<td>1</td>
 			<td>Sydney, Australia</td>
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
-			<td>Exhausted</td>
+			<td>Open</td>
 			<td>Pitrix.viADDR#9:1:6961:66</td>
 		</tr>
 		<tr>
@@ -242,7 +242,7 @@
 			<td>2</td>
 			<td>Warwick, Australia</td>
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
-			<td>Exhausted</td>
+			<td>Open</td>
 			<td>Pitrix.viADDR#9:2:7972:67</td>
 		</tr>
 		<tr>
@@ -250,7 +250,7 @@
 			<td>1</td>
 			<td>Washington D.C., United States of America</td>
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
-			<td>Exhausted</td>
+			<td>Open</td>
 			<td>Pitrix.viADDR#9:1:9991:69</td>
 		</tr>
 		<tr>
@@ -258,7 +258,7 @@
 			<td>1</td>
 			<td>Zurich, Switzerland</td>
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
-			<td>Exhausted</td>
+			<td>Open</td>
 			<td>Pitrix.viADDR#9:1:8981:68</td>
 		</tr>
 	</table>
@@ -266,12 +266,16 @@
 					&#128994; = green light
 					&#128308; = red light
 							-->
+
+	<font color="gold"><div align="left" style="font-size:40%"><b><em>NOTE: Data not real time. Last updated February 19, 2022.</em></b></div></font>
 <br>
-	<font color="gold"><div align="left" style="font-size:50%">Data not real-time.</div></font><br>
+	<font color="gold"><div align="left" style="font-size:50%"><b>Admin Notes:</b></div></font>
+	<font color="gold"><div align="left" style="font-size:50%">February 19, 2022- Current geopolitical tensions with China and Russia have 
+	forced us to temporarily switch off viADDR allocations in these countries.</div></font><br>
 
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
-	<div align="right" style="font-size:40%">&copy; Copyright 2021</div>
+	<div align="right" style="font-size:40%">&copy; Copyright 2021-2022</div>
 	<div align="right" style="font-size:40%">Harmonious Platform Systems</div>
 	<div align="right" style="font-size:40%">ABN: 98 317 740 240</div>
 <!-- br -->
