Content update, plus news update

--- a/index.html
+++ b/index.html
@@ -180,6 +180,17 @@
 	<font color="gold"><div <span property="cc:attributionName" style="font-size:50%"><b><u>News</u></b></div></font>
 
 	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<em><b>March 6, 2022</b><br>
+	<br>
+	Due to an extreme weather event, today a number of our servers were knocked offline for a brief moment.
+	<br>
+	This was a partial blackout affecting non-critical servers only.
+	<br>
+	Critical servers which keep our platform online were unaffected and used backup power supplies.
+	<br>Uptime remains at 100%.</em>
+	</p>
+
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<em><b>February 16, 2022</b><br>
 	<br>
 	We have commissioned new hardware running Windows Server.
