--- a/about.html
+++ b/about.html
@@ -12,6 +12,11 @@
   body
 {
   font-family: "courier", sans-serif; background-color: black;
+
+   	background-image: url('images/cover-2.webp');
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
 }
 
 .main {
@@ -104,8 +109,8 @@
 	<p><strong>About</strong></p>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%">Harmonious Platform Systems is a startup. We understand the exciting 
-	and often chaotic hacker sub-culture that comes with being a startup. From day one, we have worked to ensure the startup sub-culture 
-	does not get lost and is reflected in Harmonious Platform.</div></font>
+	and often chaotic hacker sub-culture that comes with being a startup. From day one, we have worked to ensure the startup sub-culture does 
+	not get lost and is reflected in Harmonious Platform.</div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%">Harmonious Platform has heritage that dates back to 2013. From 2019, 
 	development accelerated. The global pandemic has reshaped many industries and shone a light on the many possibilities of what can be 
