--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   body
 {
   font-family: "courier", sans-serif; background-color: black;
+
+  	background-image: url('images/cover.webp');
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+
 }
 
 .main {
