just more fixes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 		<font color="black"><div align="left" style="font-size:50%">
 			<span style="background-color: gold">
 				<strong> >>>>> Delivering hybrid networks, since 2013.</strong>
-			</span></div></font>
+			</span>
+		</div></font>
 <!-- / -->
 	<hr style="border: 1px solid gold;" />
 		<!-- nav menu \./ -->
