--- a/status.html
+++ b/status.html
@@ -96,8 +96,7 @@
 
 	<p><strong>Status</strong></p>
 <br>
-	<font color="gold"><div align="left" style="font-size:50%">Pitrix viADDR Global Allocation</div></font>
-<br>
+	<font color="gold"><div align="left" style="font-size:50%"><b>Pitrix viADDR Global Allocation</b></div></font>
 
 	<style>
 	table, th, td {
@@ -114,8 +113,11 @@
 			<th>Tier</th>
 			<th>Location</th>
 			<th>Status</th>
-			<th>Allocation Threshold</th>
+			<th>Threshold</th>
 			<th>viADDR</th>
+			<th>Parent Hub</th>
+			<th>Sub-Hub</th>
+			<th>Gateway</th>
 		</tr>
 		<tr>
 			<td>&#128994</td>
@@ -124,6 +126,9 @@
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Open</td>
 			<td>Pitrix.viADDR#1:2:0012:51</td>
+			<td>2</td>
+			<td>4</td>
+			<td>EggplantTwo</td>
 		</tr>
 		<tr>
 			<td>&#128994</td>
@@ -132,6 +137,9 @@
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Open</td>
 			<td>Pitrix.viADDR#2:1:0021:52</td>
+			<td>1</td>
+			<td>1</td>
+			<td>InfinitySky</td>
 		</tr>
 		<tr>
 			<td>&#128994</td>
@@ -140,14 +148,20 @@
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#3:3:0033:53</td>
+			<td>1</td>
+			<td>3</td>
+			<td>InfinitySky</td>
 		</tr>
 		<tr>
 			<td>&#128308</td>
 			<td>1</td>
 			<td>Hong Kong, Hong Kong</td>
-			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
+			<td><font color="black"><span style="background-color: red">Inactive</span></font></td>
 			<td>Open</td>
 			<td>Pitrix.viADDR#4:1:0041:54</td>
+			<td>1</td>
+			<td>1</td>
+			<td>InfinitySky</td>
 		</tr>
 		<tr>
 			<td>&#128994</td>
@@ -156,6 +170,9 @@
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Open</td>
 			<td>Pitrix.viADDR#5:1:0051:55</td>
+			<td>1</td>
+			<td>1</td>
+			<td>InfinitySky</td>
 		</tr>
 		<tr>
 			<td>&#128994</td>
@@ -164,6 +181,9 @@
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Open</td>
 			<td>Pitrix.viADDR#6:1:0061:56</td>
+			<td>1</td>
+			<td>1</td>
+			<td>InfinitySky</td>
 		</tr>
 		<tr>
 			<td>&#128994</td>
@@ -172,14 +192,20 @@
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Open</td>
 			<td>Pitrix.viADDR#7:1:0071:57</td>
+			<td>1</td>
+			<td>1</td>
+			<td>InfinitySky</td>
 		</tr>
 		<tr>
 			<td>&#128308</td>
 			<td>2</td>
 			<td>Moscow, Russia</td>
-			<td><font color="gold"><span style="background-color: red">Inactive</span></font></td>
+			<td><font color="black"><span style="background-color: red">Inactive</span></font></td>
 			<td>Open</td>
 			<td>Pitrix.viADDR#8:2:0082:58</td>
+			<td>2</td>
+			<td>4</td>
+			<td>EggplantTwo</td>
 		</tr>
 		<tr>
 			<td>&#128994</td>
@@ -188,6 +214,9 @@
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Open</td>
 			<td>Pitrix.viADDR#9:2:0092:59</td>
+			<td>1</td>
+			<td>1</td>
+			<td>InfinitySky</td>
 		</tr>
 		<tr>
 			<td>&#128994</td>
@@ -196,6 +225,9 @@
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:3:1913:61</td>
+			<td>1</td>
+			<td>2</td>
+			<td>InfinitySky</td>
 		</tr>
 		<tr>
 			<td>&#128994</td>
@@ -204,6 +236,9 @@
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Open</td>
 			<td>Pitrix.viADDR#9:2:2922:62</td>
+			<td>2</td>
+			<td>4</td>
+			<td>EggplantTwo</td>
 		</tr>
 		<tr>
 			<td>&#128994</td>
@@ -212,6 +247,9 @@
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Open</td>
 			<td>Pitrix.viADDR#9:1:3931:63</td>
+			<td>1</td>
+			<td>2</td>
+			<td>InfinitySky</td>
 		</tr>
 		<tr>
 			<td>&#128994</td>
@@ -220,6 +258,9 @@
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Exhausted</td>
 			<td>Pitrix.viADDR#9:3:4943:64</td>
+			<td>1</td>
+			<td>2</td>
+			<td>InfinitySky</td>
 		</tr>
 		<tr>
 			<td>&#128994</td>
@@ -228,6 +269,9 @@
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Open</td>
 			<td>Pitrix.viADDR#9:1:5951:65</td>
+			<td>2</td>
+			<td>4</td>
+			<td>EggplantTwo</td>
 		</tr>
 		<tr>
 			<td>&#128994</td>
@@ -236,6 +280,9 @@
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Open</td>
 			<td>Pitrix.viADDR#9:1:6961:66</td>
+			<td>1</td>
+			<td>1</td>
+			<td>InfinitySky</td>
 		</tr>
 		<tr>
 			<td>&#128994</td>
@@ -244,6 +291,9 @@
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Open</td>
 			<td>Pitrix.viADDR#9:2:7972:67</td>
+			<td>1</td>
+			<td>1</td>
+			<td>InfinitySky</td>
 		</tr>
 		<tr>
 			<td>&#128994</td>
@@ -252,6 +302,9 @@
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Open</td>
 			<td>Pitrix.viADDR#9:1:9991:69</td>
+			<td>1</td>
+			<td>2</td>
+			<td>InfinitySky</td>
 		</tr>
 		<tr>
 			<td>&#128994</td>
@@ -260,14 +313,62 @@
 			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
 			<td>Open</td>
 			<td>Pitrix.viADDR#9:1:8981:68</td>
+			<td>2</td>
+			<td>4</td>
+			<td>EggplantTwo</td>
 		</tr>
 	</table>
+<br>
+	<table style="width:50%">
+		<tr>
+			<th>Network</th>
+			<th>Status</th>
+		</tr>
+		<tr>
+			<td>Gateway (InfinitySky)</td>
+			<td><font color="black"><span style="background-color: orange">Partial Active</span></font></td>
+		</tr>
+		<tr>
+			<td>Gateway (EggplantTwo)</td>
+			<td><font color="black"><span style="background-color: orange">Partial Active</span></font></td>
+		</tr>
+		<tr>
+			<td>Parent Hub 1</td>
+			<td><font color="black"><span style="background-color: orange">Partial Active</span></font></td>
+		</tr>
+		<tr>
+			<td>Parent Hub 2</td>
+			<td><font color="black"><span style="background-color: orange">Partial Active</span></font></td>
+		</tr>
+		<tr>
+			<td>Sub-Hub 1</td>
+			<td><font color="black"><span style="background-color: orange">Partial Active</span></font></td>
+		</tr>
+		<tr>
+			<td>Sub-Hub 2</td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
+		</tr>
+		<tr>
+			<td>Sub-Hub 3</td>
+			<td><font color="gold"><span style="background-color: green">Active</span></font></td>
+		</tr>
+		<tr>
+			<td>Sub-Hub 4</td>
+			<td><font color="black"><span style="background-color: orange">Partial Active</span></font></td>
+		</tr>
+		<tr>
+			<td>viADDR Subnet</td>
+			<td><font color="black"><span style="background-color: orange">Partial Active</span></font></td>
+		</tr>
+	</table>
+	<br>
 				<!-- colors
 					&#128994; = green light
 					&#128308; = red light
 							-->
 
-	<font color="gold"><div align="left" style="font-size:40%"><b><em>NOTE: Data not real time. Last updated February 19, 2022.</em></b></div></font>
+	<font color="gold"><div align="left" style="font-size:40%"><b><em>NOTE: Data is not real time. This page is managed and updated manually 
+	to reflect the current configuration. Last updated March 19, 2022.</em></b></div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%"><b>Admin Notes:</b></div></font>
 	<font color="gold"><div align="left" style="font-size:50%">February 19, 2022- Current geopolitical tensions with China and Russia have 
